@@ -378,17 +378,17 @@
 <td><p>[]</p></td>
 <td><p>uncertainty of the cloud fraction</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>cloud_altitude</strong></p></td>
+<tr class="row-odd"><td><p><strong>cloud_height</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[km]</p></td>
-<td><p>cloud altitude</p></td>
+<td><p>cloud height</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>cloud_altitude_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>cloud_height_uncertainty</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[km]</p></td>
-<td><p>uncertainty of the cloud altitude</p></td>
+<td><p>uncertainty of the cloud height</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>cloud_pressure</strong></p></td>
 <td><p>float</p></td>
@@ -686,11 +686,11 @@
 <tr class="row-odd"><td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/cloud_fraction_intensity_weighted_precision[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>cloud_altitude</strong></p></td>
+<tr class="row-even"><td><p><strong>cloud_height</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_height_crb</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>cloud_altitude_uncertainty</strong></p></td>
+<tr class="row-odd"><td><p><strong>cloud_height_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_height_crb_precision</strong></p></td>
 </tr>
